// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`anchor demo > renders _semantic correctly 1`] = `
<div
  class="semantic-preview-container"
  data-v-dfc8ebef=""
>
  <div
    class="ant-row css-var-root semantic-preview-row"
    data-v-dfc8ebef=""
  >
    <div
      class="ant-col ant-col-16 css-var-root semantic-preview-col"
      data-v-dfc8ebef=""
    >
      <div
        class="css-var-v-0 ant-anchor-css-var ant-anchor-wrapper semantic-mark-root"
        style="max-height: 100vh;"
      >
        <div
          class="ant-anchor ant-anchor-fixed"
        >
          <span
            class="ant-anchor-ink semantic-mark-indicator"
          />
          <div
            class="ant-anchor-link semantic-mark-item"
          >
            <a
              class="ant-anchor-link-title semantic-mark-itemTitle"
              href="#api"
              title="API"
            >
              API
            </a>
            <div
              class="ant-anchor-link semantic-mark-item"
            >
              <a
                class="ant-anchor-link-title semantic-mark-itemTitle"
                href="#anchor-props"
                title="Anchor Props"
              >
                Anchor Props
              </a>
              <!---->
            </div>
            <div
              class="ant-anchor-link semantic-mark-item"
            >
              <a
                class="ant-anchor-link-title semantic-mark-itemTitle"
                href="#link-props"
                title="Link Props"
              >
                Link Props
              </a>
              <!---->
            </div>
          </div>
          <div
            class="ant-anchor-link semantic-mark-item"
          >
            <a
              class="ant-anchor-link-title semantic-mark-itemTitle"
              href="#anchor-demo-basic"
              title="Basic demo"
            >
              Basic demo
            </a>
            <!---->
          </div>
          <div
            class="ant-anchor-link semantic-mark-item"
          >
            <a
              class="ant-anchor-link-title semantic-mark-itemTitle"
              href="#anchor-demo-static"
              title="Static demo"
            >
              Static demo
            </a>
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-col ant-col-8 css-var-root"
      data-v-dfc8ebef=""
    >
      <ul
        class="semantic-list"
        data-v-dfc8ebef=""
      >
        <li
          class="semantic-list-item"
          data-v-dfc8ebef=""
        >
          <div
            class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
            data-v-dfc8ebef=""
          >
            <div
              class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
              data-v-dfc8ebef=""
            >
              <!-- Title + Version -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <h5
                  class="ant-typography css-var-root"
                  style="margin: 0px;"
                >
                  root
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </h5>
                <span
                  class="ant-tag ant-tag-filled ant-tag-blue css-var-root"
                  data-v-dfc8ebef=""
                >
                  1.0.0
                  <!---->
                  <!---->
                  <!---->
                </span>
              </div>
              <!-- Pin + Sample -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="pushpin"
                      class="anticon anticon-pushpin"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="pushpin"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M878.3 392.1L631.9 145.7c-6.5-6.5-15-9.7-23.5-9.7s-17 3.2-23.5 9.7L423.8 306.9c-12.2-1.4-24.5-2-36.8-2-73.2 0-146.4 24.1-206.5 72.3a33.23 33.23 0 00-2.7 49.4l181.7 181.7-215.4 215.2a15.8 15.8 0 00-4.6 9.8l-3.4 37.2c-.9 9.4 6.6 17.4 15.9 17.4.5 0 1 0 1.5-.1l37.2-3.4c3.7-.3 7.2-2 9.8-4.6l215.4-215.4 181.7 181.7c6.5 6.5 15 9.7 23.5 9.7 9.7 0 19.3-4.2 25.9-12.4 56.3-70.3 79.7-158.3 70.2-243.4l161.1-161.1c12.9-12.8 12.9-33.8 0-46.8zM666.2 549.3l-24.5 24.5 3.8 34.4a259.92 259.92 0 01-30.4 153.9L262 408.8c12.9-7.1 26.3-13.1 40.3-17.9 27.2-9.4 55.7-14.1 84.7-14.1 9.6 0 19.3.5 28.9 1.6l34.4 3.8 24.5-24.5L608.5 224 800 415.5 666.2 549.3z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <!---->
              </div>
            </div>
            <div
              class="ant-typography css-var-root"
              style="margin: 0px; font-size: 12px;"
            >
              Root element with layout positioning, padding, margin, background color and other basic styles
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </li>
        <li
          class="semantic-list-item"
          data-v-dfc8ebef=""
        >
          <div
            class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
            data-v-dfc8ebef=""
          >
            <div
              class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
              data-v-dfc8ebef=""
            >
              <!-- Title + Version -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <h5
                  class="ant-typography css-var-root"
                  style="margin: 0px;"
                >
                  item
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </h5>
                <span
                  class="ant-tag ant-tag-filled ant-tag-blue css-var-root"
                  data-v-dfc8ebef=""
                >
                  1.0.0
                  <!---->
                  <!---->
                  <!---->
                </span>
              </div>
              <!-- Pin + Sample -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="pushpin"
                      class="anticon anticon-pushpin"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="pushpin"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M878.3 392.1L631.9 145.7c-6.5-6.5-15-9.7-23.5-9.7s-17 3.2-23.5 9.7L423.8 306.9c-12.2-1.4-24.5-2-36.8-2-73.2 0-146.4 24.1-206.5 72.3a33.23 33.23 0 00-2.7 49.4l181.7 181.7-215.4 215.2a15.8 15.8 0 00-4.6 9.8l-3.4 37.2c-.9 9.4 6.6 17.4 15.9 17.4.5 0 1 0 1.5-.1l37.2-3.4c3.7-.3 7.2-2 9.8-4.6l215.4-215.4 181.7 181.7c6.5 6.5 15 9.7 23.5 9.7 9.7 0 19.3-4.2 25.9-12.4 56.3-70.3 79.7-158.3 70.2-243.4l161.1-161.1c12.9-12.8 12.9-33.8 0-46.8zM666.2 549.3l-24.5 24.5 3.8 34.4a259.92 259.92 0 01-30.4 153.9L262 408.8c12.9-7.1 26.3-13.1 40.3-17.9 27.2-9.4 55.7-14.1 84.7-14.1 9.6 0 19.3.5 28.9 1.6l34.4 3.8 24.5-24.5L608.5 224 800 415.5 666.2 549.3z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <!---->
              </div>
            </div>
            <div
              class="ant-typography css-var-root"
              style="margin: 0px; font-size: 12px;"
            >
              Link item element with padding, text color, hover states, transition animations and other styles
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </li>
        <li
          class="semantic-list-item"
          data-v-dfc8ebef=""
        >
          <div
            class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
            data-v-dfc8ebef=""
          >
            <div
              class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
              data-v-dfc8ebef=""
            >
              <!-- Title + Version -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <h5
                  class="ant-typography css-var-root"
                  style="margin: 0px;"
                >
                  itemTitle
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </h5>
                <span
                  class="ant-tag ant-tag-filled ant-tag-blue css-var-root"
                  data-v-dfc8ebef=""
                >
                  1.0.0
                  <!---->
                  <!---->
                  <!---->
                </span>
              </div>
              <!-- Pin + Sample -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="pushpin"
                      class="anticon anticon-pushpin"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="pushpin"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M878.3 392.1L631.9 145.7c-6.5-6.5-15-9.7-23.5-9.7s-17 3.2-23.5 9.7L423.8 306.9c-12.2-1.4-24.5-2-36.8-2-73.2 0-146.4 24.1-206.5 72.3a33.23 33.23 0 00-2.7 49.4l181.7 181.7-215.4 215.2a15.8 15.8 0 00-4.6 9.8l-3.4 37.2c-.9 9.4 6.6 17.4 15.9 17.4.5 0 1 0 1.5-.1l37.2-3.4c3.7-.3 7.2-2 9.8-4.6l215.4-215.4 181.7 181.7c6.5 6.5 15 9.7 23.5 9.7 9.7 0 19.3-4.2 25.9-12.4 56.3-70.3 79.7-158.3 70.2-243.4l161.1-161.1c12.9-12.8 12.9-33.8 0-46.8zM666.2 549.3l-24.5 24.5 3.8 34.4a259.92 259.92 0 01-30.4 153.9L262 408.8c12.9-7.1 26.3-13.1 40.3-17.9 27.2-9.4 55.7-14.1 84.7-14.1 9.6 0 19.3.5 28.9 1.6l34.4 3.8 24.5-24.5L608.5 224 800 415.5 666.2 549.3z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <!---->
              </div>
            </div>
            <div
              class="ant-typography css-var-root"
              style="margin: 0px; font-size: 12px;"
            >
              Title text element with font styles, color changes, text decoration, transition effects and other styles
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </li>
        <li
          class="semantic-list-item"
          data-v-dfc8ebef=""
        >
          <div
            class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
            data-v-dfc8ebef=""
          >
            <div
              class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
              data-v-dfc8ebef=""
            >
              <!-- Title + Version -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <h5
                  class="ant-typography css-var-root"
                  style="margin: 0px;"
                >
                  indicator
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </h5>
                <span
                  class="ant-tag ant-tag-filled ant-tag-blue css-var-root"
                  data-v-dfc8ebef=""
                >
                  1.0.0
                  <!---->
                  <!---->
                  <!---->
                </span>
              </div>
              <!-- Pin + Sample -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="pushpin"
                      class="anticon anticon-pushpin"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="pushpin"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M878.3 392.1L631.9 145.7c-6.5-6.5-15-9.7-23.5-9.7s-17 3.2-23.5 9.7L423.8 306.9c-12.2-1.4-24.5-2-36.8-2-73.2 0-146.4 24.1-206.5 72.3a33.23 33.23 0 00-2.7 49.4l181.7 181.7-215.4 215.2a15.8 15.8 0 00-4.6 9.8l-3.4 37.2c-.9 9.4 6.6 17.4 15.9 17.4.5 0 1 0 1.5-.1l37.2-3.4c3.7-.3 7.2-2 9.8-4.6l215.4-215.4 181.7 181.7c6.5 6.5 15 9.7 23.5 9.7 9.7 0 19.3-4.2 25.9-12.4 56.3-70.3 79.7-158.3 70.2-243.4l161.1-161.1c12.9-12.8 12.9-33.8 0-46.8zM666.2 549.3l-24.5 24.5 3.8 34.4a259.92 259.92 0 01-30.4 153.9L262 408.8c12.9-7.1 26.3-13.1 40.3-17.9 27.2-9.4 55.7-14.1 84.7-14.1 9.6 0 19.3.5 28.9 1.6l34.4 3.8 24.5-24.5L608.5 224 800 415.5 666.2 549.3z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <!---->
              </div>
            </div>
            <div
              class="ant-typography css-var-root"
              style="margin: 0px; font-size: 12px;"
            >
              Indicator element with width, height, background color, position changes, transition animations and other styles
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`anchor demo > renders basic correctly 1`] = `
<div
  class="ant-row css-var-root"
>
  <div
    class="ant-col ant-col-16 css-var-root"
  >
    <div
      id="part-1"
      style="height: 100vh; background: rgba(255, 0, 0, 0.02);"
    />
    <div
      id="part-2"
      style="height: 100vh; background: rgba(0, 255, 0, 0.02);"
    />
    <div
      id="part-3"
      style="height: 100vh; background: rgba(0, 0, 255, 0.02);"
    />
  </div>
  <div
    class="ant-col ant-col-8 css-var-root"
  >
    <div>
      <!---->
      <div
        class=""
      >
        <div
          class="css-var-root ant-anchor-css-var ant-anchor-wrapper"
          style="max-height: 100vh;"
        >
          <div
            class="ant-anchor"
          >
            <span
              class="ant-anchor-ink"
            />
            <div
              class="ant-anchor-link"
            >
              <a
                class="ant-anchor-link-title"
                href="#part-1"
                title="Part 1"
              >
                Part 1
              </a>
              <!---->
            </div>
            <div
              class="ant-anchor-link"
            >
              <a
                class="ant-anchor-link-title"
                href="#part-2"
                title="Part 2"
              >
                Part 2
              </a>
              <!---->
            </div>
            <div
              class="ant-anchor-link"
            >
              <a
                class="ant-anchor-link-title"
                href="#part-3"
                title="Part 3"
              >
                Part 3
              </a>
              <!---->
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`anchor demo > renders customizeHighlight correctly 1`] = `
<div
  data-v-app=""
>
  <div
    class="css-var-root ant-anchor-css-var ant-anchor-wrapper"
    style="max-height: 100vh;"
  >
    <div
      class="ant-anchor ant-anchor-fixed"
    >
      <span
        class="ant-anchor-ink ant-anchor-ink-visible"
      />
      <div
        class="ant-anchor-link"
      >
        <a
          class="ant-anchor-link-title"
          href="#anchor-demo-basic"
          title="Basic demo"
        >
          Basic demo
        </a>
        <!---->
      </div>
      <div
        class="ant-anchor-link ant-anchor-link-active"
      >
        <a
          class="ant-anchor-link-title ant-anchor-link-title-active"
          href="#anchor-demo-static"
          title="Static demo"
        >
          Static demo
        </a>
        <!---->
      </div>
      <div
        class="ant-anchor-link"
      >
        <a
          class="ant-anchor-link-title"
          href="#api"
          title="API"
        >
          API
        </a>
        <div
          class="ant-anchor-link"
        >
          <a
            class="ant-anchor-link-title"
            href="#anchor-props"
            title="Anchor Props"
          >
            Anchor Props
          </a>
          <!---->
        </div>
        <div
          class="ant-anchor-link"
        >
          <a
            class="ant-anchor-link-title"
            href="#link-props"
            title="Link Props"
          >
            Link Props
          </a>
          <!---->
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`anchor demo > renders horizontal correctly 1`] = `
<div>
  <div
    style="padding: 20px;"
  >
    <div>
      <!---->
      <div
        class=""
      >
        <div
          class="css-var-root ant-anchor-css-var ant-anchor-wrapper ant-anchor-wrapper-horizontal"
          style="max-height: 100vh;"
        >
          <div
            class="ant-anchor"
          >
            <span
              class="ant-anchor-ink"
            />
            <div
              class="ant-anchor-link"
            >
              <a
                class="ant-anchor-link-title"
                href="#part-1"
                title="Part 1"
              >
                Part 1
              </a>
              <!---->
            </div>
            <div
              class="ant-anchor-link"
            >
              <a
                class="ant-anchor-link-title"
                href="#part-2"
                title="Part 2"
              >
                Part 2
              </a>
              <!---->
            </div>
            <div
              class="ant-anchor-link"
            >
              <a
                class="ant-anchor-link-title"
                href="#part-3"
                title="Part 3"
              >
                Part 3
              </a>
              <!---->
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      id="part-1"
      style="width: 100vw; height: 100vh; text-align: center; background: rgba(0, 255, 0, 0.02);"
    />
    <div
      id="part-2"
      style="width: 100vw; height: 100vh; text-align: center; background: rgba(0, 0, 255, 0.02);"
    />
    <div
      id="part-3"
      style="width: 100vw; height: 100vh; text-align: center; background: rgb(255, 251, 233);"
    />
  </div>
</div>
`;

exports[`anchor demo > renders onChange correctly 1`] = `
<div
  data-v-app=""
>
  <div
    class="css-var-root ant-anchor-css-var ant-anchor-wrapper"
    style="max-height: 100vh;"
  >
    <div
      class="ant-anchor ant-anchor-fixed"
    >
      <span
        class="ant-anchor-ink"
      />
      <div
        class="ant-anchor-link"
      >
        <a
          class="ant-anchor-link-title"
          href="#anchor-demo-basic"
          title="Basic demo"
        >
          Basic demo
        </a>
        <!---->
      </div>
      <div
        class="ant-anchor-link"
      >
        <a
          class="ant-anchor-link-title"
          href="#anchor-demo-static"
          title="Static demo"
        >
          Static demo
        </a>
        <!---->
      </div>
      <div
        class="ant-anchor-link"
      >
        <a
          class="ant-anchor-link-title"
          href="#api"
          title="API"
        >
          API
        </a>
        <div
          class="ant-anchor-link"
        >
          <a
            class="ant-anchor-link-title"
            href="#anchor-props"
            title="Anchor Props"
          >
            Anchor Props
          </a>
          <!---->
        </div>
        <div
          class="ant-anchor-link"
        >
          <a
            class="ant-anchor-link-title"
            href="#link-props"
            title="Link Props"
          >
            Link Props
          </a>
          <!---->
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`anchor demo > renders onClick correctly 1`] = `
<div
  data-v-app=""
>
  <div
    class="css-var-root ant-anchor-css-var ant-anchor-wrapper"
    style="max-height: 100vh;"
  >
    <div
      class="ant-anchor ant-anchor-fixed"
    >
      <span
        class="ant-anchor-ink"
      />
      <div
        class="ant-anchor-link"
      >
        <a
          class="ant-anchor-link-title"
          href="#anchor-demo-basic"
          title="Basic demo"
        >
          Basic demo
        </a>
        <!---->
      </div>
      <div
        class="ant-anchor-link"
      >
        <a
          class="ant-anchor-link-title"
          href="#anchor-demo-static"
          title="Static demo"
        >
          Static demo
        </a>
        <!---->
      </div>
      <div
        class="ant-anchor-link"
      >
        <a
          class="ant-anchor-link-title"
          href="#api"
          title="API"
        >
          API
        </a>
        <div
          class="ant-anchor-link"
        >
          <a
            class="ant-anchor-link-title"
            href="#anchor-props"
            title="Anchor Props"
          >
            Anchor Props
          </a>
          <!---->
        </div>
        <div
          class="ant-anchor-link"
        >
          <a
            class="ant-anchor-link-title"
            href="#link-props"
            title="Link Props"
          >
            Link Props
          </a>
          <!---->
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`anchor demo > renders replace correctly 1`] = `
<div
  class="ant-row css-var-root"
>
  <div
    class="ant-col ant-col-16 css-var-root"
  >
    <div
      id="part-1"
      style="height: 100vh; background: rgba(255, 0, 0, 0.02);"
    />
    <div
      id="part-2"
      style="height: 100vh; background: rgba(0, 255, 0, 0.02);"
    />
    <div
      id="part-3"
      style="height: 100vh; background: rgba(0, 0, 255, 0.02);"
    />
  </div>
  <div
    class="ant-col ant-col-8 css-var-root"
  >
    <div>
      <!---->
      <div
        class=""
      >
        <div
          class="css-var-root ant-anchor-css-var ant-anchor-wrapper"
          style="max-height: 100vh;"
        >
          <div
            class="ant-anchor"
          >
            <span
              class="ant-anchor-ink"
            />
            <div
              class="ant-anchor-link"
            >
              <a
                class="ant-anchor-link-title"
                href="#part-1"
                title="Part 1"
              >
                Part 1
              </a>
              <!---->
            </div>
            <div
              class="ant-anchor-link"
            >
              <a
                class="ant-anchor-link-title"
                href="#part-2"
                title="Part 2"
              >
                Part 2
              </a>
              <!---->
            </div>
            <div
              class="ant-anchor-link"
            >
              <a
                class="ant-anchor-link-title"
                href="#part-3"
                title="Part 3"
              >
                Part 3
              </a>
              <!---->
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`anchor demo > renders static correctly 1`] = `
<div
  data-v-app=""
>
  <div
    class="css-var-root ant-anchor-css-var ant-anchor-wrapper"
    style="max-height: 100vh;"
  >
    <div
      class="ant-anchor ant-anchor-fixed"
    >
      <span
        class="ant-anchor-ink"
      />
      <div
        class="ant-anchor-link"
      >
        <a
          class="ant-anchor-link-title"
          href="#anchor-demo-basic"
          title="Basic demo"
        >
          Basic demo
        </a>
        <!---->
      </div>
      <div
        class="ant-anchor-link"
      >
        <a
          class="ant-anchor-link-title"
          href="#anchor-demo-static"
          title="Static demo"
        >
          Static demo
        </a>
        <!---->
      </div>
      <div
        class="ant-anchor-link"
      >
        <a
          class="ant-anchor-link-title"
          href="#api"
          title="API"
        >
          API
        </a>
        <div
          class="ant-anchor-link"
        >
          <a
            class="ant-anchor-link-title"
            href="#anchor-props"
            title="Anchor Props"
          >
            Anchor Props
          </a>
          <!---->
        </div>
        <div
          class="ant-anchor-link"
        >
          <a
            class="ant-anchor-link-title"
            href="#link-props"
            title="Link Props"
          >
            Link Props
          </a>
          <!---->
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`anchor demo > renders style-class correctly 1`] = `
<div
  class="ant-row css-var-root"
>
  <div
    class="ant-col ant-col-16 css-var-root"
  >
    <div
      id="part-1"
      style="height: 100vh; background: rgba(255, 0, 0, 0.08);"
    />
    <div
      id="part-2"
      style="height: 100vh; background: rgba(0, 255, 0, 0.08);"
    />
    <div
      id="part-3"
      style="height: 100vh; background: rgba(0, 0, 255, 0.08);"
    />
  </div>
  <div
    class="ant-col ant-col-8 css-var-root"
  >
    <div>
      <!---->
      <div
        class=""
      >
        <div
          class="css-var-root ant-anchor-css-var ant-anchor-wrapper demo-anchor-root"
          style="max-height: 100vh; background-color: rgba(255, 251, 230, 0.5); height: 100vh;"
        >
          <div
            class="ant-anchor"
          >
            <span
              class="ant-anchor-ink demo-anchor-indicator"
            />
            <div
              class="ant-anchor-link demo-anchor-item"
            >
              <a
                class="ant-anchor-link-title demo-anchor-title"
                href="#part-1"
                title="Part 1"
              >
                Part 1
              </a>
              <!---->
            </div>
            <div
              class="ant-anchor-link demo-anchor-item"
            >
              <a
                class="ant-anchor-link-title demo-anchor-title"
                href="#part-2"
                title="Part 2"
              >
                Part 2
              </a>
              <!---->
            </div>
            <div
              class="ant-anchor-link demo-anchor-item"
            >
              <a
                class="ant-anchor-link-title demo-anchor-title"
                href="#part-3"
                title="Part 3"
              >
                Part 3
              </a>
              <!---->
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`anchor demo > renders targetOffset correctly 1`] = `
<div>
  <div
    class="ant-row css-var-root"
  >
    <div
      class="ant-col ant-col-18 css-var-root"
    >
      <div
        id="part-1"
        style="height: 100vh; background: rgba(255, 0, 0, 0.02); margin-top: 30vh;"
      >
         Part 1 
      </div>
      <div
        id="part-2"
        style="height: 100vh; background: rgba(0, 255, 0, 0.02);"
      >
         Part 2 
      </div>
      <div
        id="part-3"
        style="height: 100vh; background: rgba(0, 0, 255, 0.02);"
      >
         Part 3 
      </div>
    </div>
    <div
      class="ant-col ant-col-6 css-var-root"
    >
      <div>
        <!---->
        <div
          class=""
        >
          <div
            class="css-var-root ant-anchor-css-var ant-anchor-wrapper"
            style="max-height: 100vh;"
          >
            <div
              class="ant-anchor"
            >
              <span
                class="ant-anchor-ink"
              />
              <div
                class="ant-anchor-link"
              >
                <a
                  class="ant-anchor-link-title"
                  href="#part-1"
                  title="Part 1"
                >
                  Part 1
                </a>
                <!---->
              </div>
              <div
                class="ant-anchor-link"
              >
                <a
                  class="ant-anchor-link-title"
                  href="#part-2"
                  title="Part 2"
                >
                  Part 2
                </a>
                <!---->
              </div>
              <div
                class="ant-anchor-link"
              >
                <a
                  class="ant-anchor-link-title"
                  href="#part-3"
                  title="Part 3"
                >
                  Part 3
                </a>
                <!---->
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style="height: 30vh; background-color: rgba(0, 0, 0, 0.85); position: fixed; top: 0px; inset-inline-start: 0; width: 75%; color: rgb(255, 255, 255);"
  >
    <div>
      Fixed Top Block
    </div>
  </div>
</div>
`;
